main: fix toolbar issue on small screens

--- a/Frontend/src/app/app.component.scss
+++ b/Frontend/src/app/app.component.scss
@@ -1,34 +1,36 @@
 .main {
-    height: 100%;
-    display: grid;
-    grid-template-rows: 64px 1fr;
-  grid-template-columns: 1fr;
-    background-color: #FAFAFA;
+  height                : 100%;
+  display               : grid;
+  grid-template-rows    : 64px 1fr;
+  @media (max-width : 600px) {
+    grid-template-rows : 56px 1fr;
+  }
+  grid-template-columns : 1fr;
+  background-color      : #FAFAFA;
   .mat-toolbar {
-    grid-row: 1 / span 1;
+    grid-row : 1 / span 1;
   }
   .mat-sidenav-container {
-    grid-row: 2 / span 1;
+    grid-row : 2 / span 1;
   }
 }
 
 .mat-subheader {
-  margin: 0;
+  margin : 0;
 }
 
 #user {
-  padding: 16px;
-  margin: 0;
+  padding : 16px;
+  margin  : 0;
   h2 {
-    margin-bottom: 0px;
+    margin-bottom : 0px;
   }
 }
 
-
 .activity-indicator {
-  position: absolute;
+  position : absolute;
 }
 
 .example-spacer {
-  flex: 1 1 auto;
+  flex : 1 1 auto;
 }
